src/Prototypes/hmi/ui/public/css/HMI_style.css
/* ... */
body{
  display: flex;
  justify-content: center;
  background: black;
  margin: 0;padding: 0;
  align-items: center;
  height: 100vh;
}
#animal-popup .audio_component {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

#animal-popup .audio_component .audioContainer{
  display: flex;
  justify-content: space-between;
  height: 64px;
  --boxSize: 8px;
  --gutter: 8px;
  width: calc((var(--boxSize) + var(--gutter)) * 20);
}

#animal-popup .audioContainer .box{
  transform: scaleY(.01);
  height: 100%;
  width: var(--boxSize);
  background: #e48595 !important;
  animation-duration: 1.5s;
  animation-timing-function: ease-in-out;
  animation-iteration-count: infinite;
  border-radius: 8px;
}

.box1 , .box6 {
  animation-name: quiet ;
}

.box2 , .box7 {
  animation-name: normal ;
}
.box3 , .box8 {
  animation-name: quiet ;
}

.box4 , .box9{
  animation-name: loud ;
}

.box5 , .box10{
  animation-name: quiet ;
}

.boxmuted {
  animation-name: silence;
}

@media (min-width: 0px) {
  #menu {
    max-width: 500px;
  }
  #filter-menu{
    max-width: 500px;
  }
  #animal-popup{
    max-width: 500px;
  }
  #FAQ{
    max-width: 500px;
  }
  #SIM{
    max-width: 500px;
  }
}

.navbar {
  margin-top: 50px;
  display: flex;
  justify-content: left;
  align-items: left;
  z-index: 997;
}



#I {
  height: 100%;
  width: 0%;
  position: fixed;
  z-index: 994;
  top: 0;
  right: 0;
  background-color: none;
  color: white;
  overflow-x: hidden;
  padding-top: 60px;
  margin-top: 30px;
}

  .hamburger-icon {
    display: none;
    width: 30px;
    height: 20px;
    position: relative;
    cursor: pointer;
    position: absolute;
    position: absolute;
    top: 10px; /* adjust this value to set the distance from the top of the container */
    right: 10px; /* adjust this value to set the distance from the right of the container */
    z-index: 999; /* ensure the icon is on top of other content */
    transition: 1s all ease-in-out;
  }
  
  .hamburger-icon span {
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    background: white;
    border-radius: 3px;
    opacity: 1;
    left: 0;
    transform: rotate(0deg);
    transition: all 0.1s ease-out;
  }

  audio {
    width: 80%;
    margin: auto;
    align-items: center;
    justify-content: center;
    display: flex;
  }
  audio::-webkit-media-controls-panel {
    background-color: rgba(19, 19, 52, 0.5);
    border-radius: 20px;
  }
  
  .hamburger-icon span:nth-child(1) {
    top: 0px;
  }
  
  .hamburger-icon span:nth-child(2) {
    top: 8px;
  }
  
  .hamburger-icon span:nth-child(3) {
    top: 16px;
  }
  
  .hamburger-icon.active span:nth-child(1) {
    top: 8px;
    transform: rotate(45deg);
  }
  
  .hamburger-icon.active span:nth-child(2) {
    opacity: 0;
  }
  
  .hamburger-icon.active span:nth-child(3) {
    top: 8px;
    transform: rotate(-45deg);
  }


  .dropdown-menu {
    width: auto;
    max-width: none;
    white-space: nowrap;
    overflow: hidden;
    overflow-wrap: break-word;
  }
  
  .dropdown-menu .col {
    
    vertical-align: top;
    width: 1%;
    
    padding: 0 10px;
  }

.dropdown {
    background-color: none;
}

.dropdown-toggle {
    display: flex;
    align-items: center;
    border-radius: 0;
    background-color:rgba(0,0,0,0.5);
    color: black;
}

.dropdown-toggle i {
    margin-right: 5px;
    border-radius: 0;
    background-color: rgba(0,0,0,0.5);
    color: black;
}

.dropdown-menu {
    max-height: 200px;
    overflow-y: auto;
    border-radius: 0;
    
}

.dropdown-menu li {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 5px;
    border-radius: 0;
    
}

.form-check-input {
    margin-top: 2px;
}

input[type="checkbox"]:checked{
  background-color: grey !important;
  border: solid 2px white;
}

input[type="checkbox"]{
  background-color: black;
  border-color: white;
  outline: none;
}

.vulnerable {
  
  border-color :orange !important;
 
}


.normal{
  
  border-color: green !important;
}

.endangered{
  
  border-color: red !important;
}

.invasive{
  border-color :blue !important;
  
}

.nearthreatened{
  
  border-color :yellow !important;
}

#content{
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    /*font-family: 'Roboto', sans-serif;*/
}


#ABOUT{
    height: 0;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: black;
    color: white;
    overflow-x: hidden;
    
    padding-top: 60px;
    margin-top: 30px;

}



#SIM {  
  padding: 0px 0px 0px 0px;
  height: 100%;
  width: 0%;
  position: fixed;
  z-index: 995;
  bottom: 0;
  right: 0;
  background-color: none;
  color: white;
  overflow-x: hidden;
  
  padding-top: 60px;
  margin-top: 30px;
}

#SIM-contents{
  padding-top: 20px;
  margin-left: 30px;
  margin-right: 30px;
  height: 85%;
  position: fixed;
  width: 440px;
  top: 110px;
  overflow-wrap: break-word;
  font-family: 'Roboto', sans-serif;
  overflow-y: scroll;
}

#filter-menu {
  padding: 0px 0px 0px 0px;
  height: 100%;
  width: 0%;
  position: fixed;
  z-index: 995;
  top: 0;
  right: 0;
  background-color: none;
  color: white;
  overflow-x: hidden;
  
  padding-top: 60px;
  margin-top: 30px;
  
}

#filter-menu-contents{
  padding-top: 20px;
  margin-left: 30px;
  margin-right: 30px;
  height: 85%;
  position: fixed;
  width: 440px;
  top: 110px;
  overflow-wrap: break-word;
  font-family: 'Roboto', sans-serif;
  overflow-y: scroll;
  overflow-x: hidden;
}

#FAQ {  
  padding: 0px 0px 0px 0px;
  height: 100%;
  width: 0%;
  position: fixed;
  z-index: 995;
  top: 0;
  right: 0;
  background-color: none;
  color: white;
  overflow-x: hidden;
  
  padding-top: 80px;
  margin-top: 30px;
}
/* ... */

